Barebones route to save pages
